# markdev

./: .gitignore  Cargo.toml  flake.nix  workspace.kdl
src/: lib.rs  main.rs  obsidian.rs
